# ApacheTomcatScanner

./: Apache-Tomcat-Scanner.py  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto_prefix_issues.yml  python-pip-build.yml
apachetomcatscanner/: Config.py  Reporter.py  Target.py  Vulnerabilities.py  VulnerabilitiesDB.py  VulnerabilitiesLoader.py  __init__.py  __main__.py  test_environement.py
apachetomcatscanner/data/: credentials.json  update_db.py
apachetomcatscanner/test_environment/: test_environement.py
apachetomcatscanner/utils/: __init__.py  network.py  scan.py  targets.py  utils.py
apachetomcatscanner/vulnerabilities/: CVE-2017-12615.json
apachetomcatscanner/vulnerabilities/2000/: CVE-2000-0672.json
apachetomcatscanner/vulnerabilities/2001/: CVE-2001-1563.json
apachetomcatscanner/vulnerabilities/2002/: CVE-2002-0682.json  CVE-2002-1394.json  CVE-2002-2006.json  CVE-2002-2007.json
apachetomcatscanner/vulnerabilities/2003/: CVE-2003-0042.json  CVE-2003-0866.json
apachetomcatscanner/vulnerabilities/2005/: CVE-2005-4703.json
apachetomcatscanner/vulnerabilities/2006/: CVE-2006-3835.json  CVE-2006-7197.json
apachetomcatscanner/vulnerabilities/2007/: CVE-2007-1358.json  CVE-2007-1858.json  CVE-2007-2450.json  CVE-2007-3385.json  CVE-2007-5342.json  CVE-2007-5461.json
apachetomcatscanner/vulnerabilities/2008/: CVE-2008-3271.json  CVE-2008-4308.json  CVE-2008-5515.json
apachetomcatscanner/vulnerabilities/2009/: CVE-2009-0033.json  CVE-2009-0580.json  CVE-2009-2901.json
apachetomcatscanner/vulnerabilities/2010/: CVE-2010-1157.json  CVE-2010-2227.json
apachetomcatscanner/vulnerabilities/2011/: CVE-2011-0013.json  CVE-2011-0534.json  (+7 more)
(+139 files in other folders)
