[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apachetomcatscanner"
version = "3.6"
description = ""
readme  = "README.md"
requires-python = ">=3.6"
license = { text = "GPL2"}
authors = [
        { email = "podalirius@protonmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "sectools>=1.3.9",
    "xlsxwriter",
    "urllib3==1.26.16",
    "requests==2.29.0"
]

[project.urls]
repository = "https://github.com/p0dalirius/ApacheTomcatScanner"


[project.optional-dependencies]
build = [
    "build"
]
twine = [
    "twine"
]
